# performanceAwarePrograming

./: .gitignore
Part1/8086/: test_listing.cmd  test_listing_c.cmd  test_listing_rust.cmd
Part1/8086/c_decode/: Disassemble.c  main.c
Part1/8086/c_decode/src/: main.c
Part1/8086/listings/: 41_add_sub_cmp_jnz.asm  44_register_movs.asm  46_add_sub_cmp.asm  challengge_more_moves.asm  many_moves.asm  more_moves.asm  single_register.asm  test_add.asm  test_add_sub.asm  test_add_sub_cmp.asm  test_byte_word.asm
Part1/8086/rust_decode/: Cargo.toml
Part1/8086/rust_decode/src/: assembled_instruction.rs  disassemble.rs  main.rs
Part1/8086/rust_decode/src/cpu/: cpu.rs
Part1/8086/rust_decode/src/instruction/: instruction.rs  mod.rs  operand.rs  singlebits.rs
Part1/8086/src/: Disassemble.c  Disassemble.h  RegEnum.c  RegEnum.h  main.c  test1  test1.asm  test2.asm
Part2/: Cargo.toml  main.rs
Part2/data_gen/: Cargo.toml
Part2/data_gen/src/: generator.rs  haversine.rs  main.rs  parser.rs
Part2/repetition_tester/: Cargo.toml
Part2/repetition_tester/src/: lib.rs
Part2/test_macro/: Cargo.toml
Part2/test_macro/src/: main.rs
Part2/timer_macros/: Cargo.toml
Part2/timer_macros/src/: lib.rs
Part2/timer_macros/timer/: Cargo.toml
Part2/timer_macros/timer/src/: counter.rs  lib.rs
Part2/timer_macros/timer_internal/: Cargo.toml
Part2/timer_macros/timer_internal/src/: lib.rs
Part2/util/: Cargo.toml
Part2/util/src/: counter.rs  haversine.rs  lib.rs
