[package]
name = "Part2"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["util", "bin/*", "timer_macros"]
resolver = "2"

[[bin]]
name = "test-mac"
path = "main.rs"

[dependencies]
timer_macros = {path = "./timer_macros"}

[workspace.dependencies]
#local
generator = { path = "./bin/generator"}
parser= { path = "./bin/parser"}
util = { path = "./util"}
timer_macros = {path = "./timer_macros"}
test_macros = {path = "./timer_macros/tests"}

rand = "0.8.5"
rand_chacha = "0.3.1"
winapi = { version = "0.3.9", features = ["profileapi"] }
clap = { version = "4.5.6", features = ["derive"] }
