[workspace]
members = ["util", "bin/*", "timer_macros", "repetition_tester"]
resolver = "2"

[workspace.dependencies]
#local
generator = { path = "./bin/generator"}
parser= { path = "./bin/parser"}
util = { path = "./util"}
timer_macros = {path = "./timer_macros"}
test_macros = {path = "./timer_macros/tests"}
repetition_tester = {path = "./repetition_tester"}

rand = "0.8.5"
rand_chacha = "0.3.1"
winapi = { version = "0.3.9", features = ["profileapi"] }
clap = { version = "4.5.6", features = ["derive"] }
