[package]
name = "rust_decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "2.5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
clap = { version = "4.5.4", features = ["derive"] }
